Final commit before project due

--- a/style.css
+++ b/style.css
@@ -4,3 +4,10 @@
     flex-direction: column;
     height: 600px;
 }
+
+.video
+{
+    transform: rotateY(180deg);
+    -webkit-transform:rotateY(180deg); /* Safari and Chrome */
+    -moz-transform:rotateY(180deg); /* Firefox */
+}
